# monitor

./: .ws-context  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml
bruno/monitor/: Add system.bru  Change password.bru  Delete system.bru  Edit name.bru  Get Public.bru  Get protected.bru  List Systems.bru  Login status.bru  Login.bru  Logout.bru  Ping status.bru  Remove system.bru  bruno.json
bruno/monitor/environments/: Remote.bru
src/backend/: .dockerignore  .env.example  .gitignore  .tolgeerc.json  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  nixpacks.toml
src/backend/.sqlx/: query-05e1caf657326ca954f4d241ccd4f15e73852e4631d91f0251c2085ad04bb154.json  query-318ca7e3ffce800161b5fdb9bbcd2fcd8d9682b6160c5d469a013343ac577623.json  query-3332fc91a10c76452ecef88069f18c0447e22aff503a344c15a6bce7f4cc35f8.json  query-3603437a55de3730999fa7c409ddf5d7e548209eaad315860d5cc8c444f395ab.json  query-362c317678e025ee3918971452422a8b084898fffa9cbec9eb1ddf2592b29759.json  query-48e4d1ade4572495eb67aa1b7bd01b6e92202d605660f95cac5935004e933678.json  query-546f4d2a985eae3ef242dca976a0d7f0643d4239cb5eea1b079c3d16ff2feff1.json  query-684044ae2319e02ec1adeedd1828c27421fb3ff0c93374f19bb523f89904c812.json  query-750c7d9567725acddf3e2c514482323988d9b5478560fe613c845f626959681f.json  query-756ebb8947b9af2a176553566d40d7212787d3b92d210a14d60d0d177d8084be.json  query-8df1852f9bbb9e87515442ea7b46962e8913f1fe637c65442e18a22ab5d86b6c.json  query-8fd797b7ef2e8a73abb7652fe6b7f1c28af4c3dbe724c27e77ac4fb1131c55a9.json  query-9c5a450a2584ab945d351b281a7c32da52af942e85c03eff780eeab98a5866b7.json  query-9d887edffbe813cfa5342eb233854ea5b7cd932fcd7fc3f835c356ca391840ea.json  query-a9eb834a318ca26e4bb8f2505c645f6ddc9d0b2cbe2512a70606d6509cbdc3f5.json  query-ad46e6c4ecda38b85b622b3bedc00b5bb31950a3a0f1b3baf53d3f056e6cae7a.json  query-b07763c4b32876a1bba22510bcbfe186867301fef95f14beac65b4d0f66ea1d2.json  query-bc1e9e839086dfab0910a828053b10f69ad99797e30db92e44893c48b8cc53dd.json  query-cafb682d4832d09c749d3c27c68da3603e5033089d4c925589920042ceb415f0.json  query-d0b253510f9a3b2076a06112a09320d0904293325d8cfce111c7be054d7c948b.json  query-da354d5e6ac6a5d7b8749836189213fffd0e4c00618d8bbe353316b428306b05.json
src/backend/bindings/: AddSystemRequest.ts  AddSystemResponse.ts  ChangePasswordRequest.ts  ChangeTimezoneRequest.ts  DeleteSystemRequest.ts  EditSystemNameRequest.ts  GetPublicRequest.ts  ListSystemRequest.ts  ListSystemsResponse.ts  LoginStatus.ts  LoginStatusResponse.ts  RemoveSystemRequest.ts  Status.ts  SystemData.ts  UserInfoResponse.ts  Visibility.ts  index.ts
src/backend/i18n/: en.json  it.json  prepare-translations.js  prepare-translations.sh
src/backend/migrations/: 20231108213118_init.sql  20240912235518_add_down_email.sql  20240918220858_add_public_private.sql  20241004210308_add_timezone.sql  20241107215031_add_language.sql
src/backend/src/: main.rs  users.rs
src/backend/src/app/: db.rs  mod.rs  openapi.rs  redis.rs  workers.rs
src/backend/src/middleware/: mod.rs  set_cache_control.rs  set_user_info.rs
src/backend/src/web/: app.rs  auth.rs  mod.rs  protected.rs
src/backend/src/web/auth/: login.rs  logout.rs  mod.rs
src/backend/src/web/protected/: add_system.rs  change_visibility.rs  delete_system.rs  edit_system_name.rs  hello.rs  list_systems.rs  mod.rs  remove_system.rs
src/backend/src/web/protected/user/: change_language.rs  change_password.rs  change_timezone.rs  get_current_settings.rs  mod.rs
src/backend/src/web/public/: healthcheck.rs  login_status.rs  mod.rs  ping_status.rs  sys_info.rs  user_info.rs
src/backend/src/web/public/public_systems/: get_public.rs  mod.rs
src/backend/src/web/utils/: date_time.rs  mod.rs  time.rs  time_conversions.rs
src/backend/src/workers/: email_worker.rs  mod.rs
src/backend/templates/: login.html  protected.html
src/frontend/: .env.development.local.example  .env.example  .gitignore  .prettierignore  .tolgeerc.json  Dockerfile  components.json  eslint.config.js  nixpacks.toml  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
src/frontend/src/: app.css  app.d.ts  app.html  app.pcss  hooks.server.ts
src/frontend/src/lib/api/: api.ts  public-api.ts  schema.d.ts
src/frontend/src/lib/bindings/: AddSystemRequest.ts  AddSystemResponse.ts  ChangeLanguageRequest.ts  ChangeTimezoneRequest.ts  ChangeVisibilityRequest.ts  DeleteSystemRequest.ts  EditSystemNameRequest.ts  GetCurrentSettingsResponse.ts  GetPublicResponse.ts  Instant.ts  ListSystemsResponse.ts  LoginResponse.ts  LogoutResponse.ts  SystemData.ts  index.ts
src/frontend/src/lib/components/: AddSystem.svelte  CopyableTextarea.svelte  DropdownMenuLinkItem.svelte  ItemStatus.svelte  Loader.svelte  Navbar.svelte  PageSelector.svelte
src/frontend/src/lib/i18n/: en.json  it.json
src/frontend/src/lib/static_data/: timezones.ts
src/frontend/src/lib/stores/: popovers.store.ts
src/frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  +page.ts
(+120 files in other folders)
