[package]
name = "monitor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["http2"] }
axum-login = "0.16"
http = "1.0"
hyper = "1.0"
password-auth = "1.0"
serde = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.34", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-sessions = { version = "0.13", default-features = false, features = ["signed"] }
thiserror = "2.0"
dotenvy = "0.15"
color-eyre = "0.6"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
ts-rs = { version = "10.0", features = ["serde-json-impl", "uuid-impl"] }
axum_thiserror = "0.1"
tower-http = { version = "0.6", features = ["trace", "compression-full", "decompression-full"] }
bb8 = "0.8"
#serde_json = "1.0.132"
rusty-sidekiq = { version = "0.11", default-features = false }
futures = "0.3"
lettre = { version = "0.11", features = ["tokio1-native-tls", "tokio1"] }
once_cell = "1.19"
tower-sessions-redis-store = { version = "0.14", features = ["enable-native-tls"] }
chrono-tz = "0.10"
humanize-duration = { version = "0.0", features = ["chrono"] }
sysinfo = { version = "0.32", features = ["serde", "system"] }
rust-i18n = "3.1"

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = true
