[package]
name = "monitor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.1", features = ["http2"] }
axum-login = "0.17.0"
http = "1.0"
hyper = "1.0"
password-auth = "1.0"
serde = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.34", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-sessions = { version = "0.14.0", default-features = false, features = ["signed"] }
thiserror = "2.0"
dotenvy = "0.15"
color-eyre = "0.6"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
axum_thiserror = "0.1"
tower-http = { version = "0.6", features = ["trace", "compression-full", "decompression-full"] }
rusty-sidekiq = { version = "0.13.1", default-features = false }
futures = "0.3"
lettre = { version = "0.11", features = ["builder", "hostname", "smtp-transport", "pool", "tokio1-rustls-tls", "tokio1"], default-features = false }
once_cell = "1.19"
tower-sessions-redis-store = { version = "0.16.0", features = ["enable-rustls"] }
chrono-tz = "0.10"
humanize-duration = { version = "0.0", features = ["chrono"] }
sysinfo = { version = "0.33", features = ["serde", "system"], default-features = false }
rust-i18n = "3.1"
ahash = "0.8"
utoipa = { version = "5.2", features = ["uuid", "chrono", "axum_extras", "auto_into_responses"] }
utoipa-axum = { version = "0.2.0" }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
serde_json = "1.0"
rustls = { version = "0.23.19", features = ["aws-lc-rs"] }

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = true
